--- a/css/styles.css
+++ b/css/styles.css
@@ -75,3 +75,23 @@
     top: 8px;
     transform: rotate(-135deg);
 }
+
+/* Add these at the end of your CSS file */
+.swiper-button-next,
+.swiper-button-prev {
+    color: white !important;
+}
+
+.swiper-pagination-bullet {
+    background: white !important;
+}
+
+.hero-swiper {
+    width: 100%;
+    height: 100%;
+}
+
+.hero-swiper .swiper-slide {
+    width: 100%;
+    height: 100%;
+}
